clean&focus on submit, general clean of code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       href="https://fonts.googleapis.com/css?family=Spicy+Rice&display=swap"
       rel="stylesheet"
     />
-    <script src="script_rework.js" async defer></script>
   </head>
   <body>
     <header>
@@ -40,18 +39,13 @@
           <div id="alert"></div>
         </div>
         <!--BUTTON-->
-        <input
-          id="button"
-          class="button"
-          type="button"
-          onclick="Submit()"
-          value="Submit"
-        />
+        <input class="submitbutton" type="button" value="Submit" />
       </div>
     </header>
     <footer>
       <h1>Created by <span>Bauza</span></h1>
     </footer>
     <div id="pi"></div>
+    <script src="script_rework.js" async defer></script>
   </body>
 </html>
