img on mobile size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header>
-      <div class="img">
+      <div class="imgmain">
         <img src="pi-logo-FE1C483B5E-seeklogo.com.png" alt="logo" />
       </div>
       <div class="strings">
